<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--menu-->
    <string name="options">Options</string>
    <string name="game">Game</string>
    <!--options-->
    <string name="white">White :</string>
    <string name="black">Black :</string>
    <string name="human">Human</string>
    <string name="computer">Computer</string>
    <string name="game_type">Game type :</string>
    <string name="cpu_level">CPU level :</string>
    <string name="standard">Standard</string>
    <string name="gothic">Gothic</string>
    <string name="begin">Create new game</string>
    <!--menu-->
    <string name="app_name">Lab3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
